<resources>
    <string name="app_name">dotLine</string>
    <string name="email_link">\@miu.edu</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="filter">Filter</string>
    <string name="community">Community</string>
    <string-array name="academy">
        <item>Masters of Software Development</item>
        <item>Computer Science program</item>
        <item>Business of Management</item>
        <item>Vida Science</item>
        <item>Accounting</item>
        <item>Art</item>
    </string-array>
</resources>