<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_default_picture"
        app:showAsAction="always"
        >

    </item>
    <item
        android:visible="false"
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        >

    </item>
    <item
        android:visible="false"

        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        >

    </item>

</menu>